syntax = "proto3";

package manythings.mitosis.event;

import "gogoproto/gogo.proto";
import "mitosis/event/v1beta1/params.proto";

option go_package = "github.com/many-things/mitosis/x/event/types";

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryVoteStatusRequest {}

message QueryVoteStatusResponse {}

message QueryProxyRequest {
  string validator = 1;
}

message QueryProxyResponse {
  string proxy = 1;
}
